# my-openenv

./: .dockerignore  .gitignore  Dockerfile  README.md  WorkBench_PRD_and_BuildPrompt.docx  check.sh  curl_output.txt  deploy_log.txt  deploy_space.py  episode_log.jsonl  extract_prd.py  genai_models.txt  genai_models_utf8.txt  index.css  inference.py  inference_demo.txt  main.py  openenv.yaml  output.txt  output_utf8.txt  output_v2.txt  prd.txt  pyproject.toml  requirements.txt  test_genai.py  test_llm.py  test_llm_out.txt  test_llm_out_utf8.txt  test_llm_out_v2.txt  test_out.txt  test_out_utf8.txt  validate.sh
.github/workflows/: deploy-hf-space.yml
.huggingface/: api_secrets.yaml
components/ui/: live-sales-dashboard.tsx
dashboard/: index.html
demos/hooks/: useRealtimeSalesData.ts
env/: __init__.py
env/email/: __init__.py  environment.py  grader.py  models.py
env/hr/: __init__.py  environment.py  grader.py  models.py
env/legal/: __init__.py  environment.py  grader.py  models.py
server/: __init__.py  app.py
tasks/: csv_easy.json  csv_hard.json  csv_medium.json  easy.json  email_adversarial.json  email_easy.json  email_hard.json  email_medium.json  hard.json  hr_adversarial.json  hr_easy.json  hr_hard.json  hr_medium.json  legal_adversarial.json  legal_easy.json  legal_hard.json  legal_medium.json  medium.json
tests/: test_email_env.py  test_email_grader.py  test_hr_env.py  test_hr_grader.py  test_legal_env.py  test_legal_grader.py
