[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "workbench-openenv"
version = "1.0.0"
description = "WorkBench multi-environment OpenEnv-compatible API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.109.2",
  "uvicorn==0.27.1",
  "openenv-core>=0.2.0",
  "openai>=1.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["env", "server"]
